Fixed websocket problem by upgrading spark version. Also fixed z-index problem with console

--- a/Server/src/main/resources/static/css/mar.css
+++ b/Server/src/main/resources/static/css/mar.css
@@ -118,7 +118,7 @@
     width: 100%;
     position: fixed;
     bottom: 0;
-    z-index: 4;
+    z-index: 8;
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -138,7 +138,7 @@
     background: #2d2d2d;
     height: 100%;
     pointer-events: auto;
-    box-shadow: rgb(0, 0, 0, 0.2) 3px 0 8px;
+    box-shadow: rgba(0, 0, 0, 0.2) 3px 0 8px;
 }
 
 .bottom-panel {
@@ -147,7 +147,7 @@
     width: 100%;
     position: fixed;
     bottom: 0;
-    z-index: 4;
+    z-index: 8;
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
 }
 
